# hias-postgraduate-help-bot

./: .gitignore  .gitmodules  Dockerfile  README.md  bot.py  config.yaml  docker-compose.yml  jm_option.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: build&push.yml
.github/workflows/: build&push.yml
chat/: __init__.py  client.py  load.py  memory.py
chat/agents/: __init__.py  group_chat_agent.py
chat/core/: agent.py  config.py  database_config.py  llm.py
chat/knowledgebase/: __init__.py  embedding.py  vdb.py
chat/memory/: README.md  __init__.py  base.py  embedding.py  manager.py
chat/memory/storage/: __init__.py  document_store.py  neo4j_store.py  qdrant_store.py
chat/memory/types/: __init__.py  episodic.py  semantic.py  working.py
chat/rag/: __init__.py  client.py  document.py
chat/tools/: base.py
plugins/: chat.py  clean.py  help.py  hias_qa.py  info.py  jm.py  new_member.py  ping_pong.py  repeat.py  summary.py  water_time.py
plugins/chat/: __init__.py  load.py
plugins/chat/knowledgebase/: __init__.py  embedding.py  vdb.py  (+1 more)
plugins/group_msg_collect/: __init__.py  model.py  plugin.py  query.py
plugins/sign_check/: __init__.py  model.py  ocr.py
scripts/: build_knowledge_base.py  clear.py  entrypoint.sh
tests/: test_episodic_memory.py  test_group_chat_agent.py  test_llm_client.py  test_memory_manager.py  test_neo4j_store.py  test_openai_embedding.py  test_qdrant_store.py  test_rag_client.py  test_semantic_memory_integration.py  test_sqlite_document_store.py  test_working_memory.py
utils/: http_server.py  llm.py  rules.py
