[project]
name = "hias-postgraduate-help-bot"
version = "1.0.0"
description = """
国科大杭高院智能学院考研群机器人
提供AI问答、AI省流、水群统计、自动审批等功能

项目地址：https://github.com/tbjuechen/hias-postgraduate-help-bot
"""
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_resolver2", "nonebot_plugin_status", "nonebot_plugin_alconna", "nonebot_plugin_wordcloud"]
plugin_dirs = ["plugins"]
builtin_plugins = []
